--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,13 +4,15 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 		<style>
 			 #bids span { font-size: 32 }
-			 .pending { font-size: 30; color: darkblue }
-			 .ready { font-size: 30; color: darkgreen }
-			 .name { font-size: 30 }
-			 .number { font-size: 25; background-color: darkgreen; color: white }
+			 .col-status { width: 50px; font-size: 30px }
+			 .col-name { vertical-align: middle, font-size: 30px }
+			 .status-text  { display: inline-block; width: 100%; text-align: center; } 
+			 .number { font-size: 20px; font-weight: bold }
+
 		</style>
 
 
@@ -23,6 +25,7 @@
 			<button class='btn btn-success' >5</button>
 			<button class='btn btn-success' >8</button>
 			<button class='btn btn-success' >13</button>
+
 			
 			<!--
 			<span class='badge'>1</span>
@@ -34,10 +37,13 @@
 			-->
 		</div>
 
+		<table class='table table-bordered'>
+			<tbody id='devlist'>
+			</body>
+		</table>
+
 		<input style='margin-top:10px' id='name' class='form-control'/>
 		<button style='margin-top:10px' class='btn btn-primary' onclick='register()'>Register</button>
-		<div id='devlist'>
-		</div>
 
         <script>
 			var app = new WebSocket("ws://vps.sonyar.info:8000/poker");
@@ -47,24 +53,30 @@
 				$("#devlist").html('');
 
 				var waiting = false;
-				for (var name in devs) {
-					if (devs[name] == 0) {
+				for (var x in devs) {
+					if (devs[x][1] == 0) {
 						waiting = true;
 					}
 				}
 
-				for (var name in devs) {
-					if (waiting && devs[name] != 0) {
-						$("#devlist").append("<span class='ready glyphicon glyphicon-ok-sign'></span><span class='name'>&nbsp;" + name + "</span>");
+				if (waiting === false) {
+					devs = devs.sort(function(a,b) { return b[1] - a[1]; });
+				}
+
+				for (var x in devs) {
+					var name = devs[x][0];
+					var num = devs[x][1];
+
+					if (waiting && num != 0) {
+						$("#devlist").append("<tr><td class='col-status bg-success'><i class='fa fa-check status-text'></i></td><td class='col-name'>" + name + "</td></tr>");
 					}
-					else if (waiting && devs[name] == 0) {
-						$("#devlist").append("<span class='pending glyphicon glyphicon-question-sign'></span><span class='name'>&nbsp" + name + "</span>");
+					else if (waiting && num == 0) {
+						$("#devlist").append("<tr><td class='col-status bg-info'><i class='fa fa-question status-text'></i></td><td class='col-name'>" + name + "</td></tr>");
 					}
 					else {
-						$("#devlist").append("<span class='number badge'>" + devs[name] + "</span><span class='name'>&nbsp" + name + "</span>");
+						$("#devlist").append("<tr><td class='col-status bg-success'><span class='number status-text'>" + num + "</span></td><td class='col-name'>" + name + "</td></tr>");
 					}
 
-					$("#devlist").append("<br/>");
 				}
 			}
 
