shorted table width

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -22,7 +22,7 @@
 		<div id='button_area' style='display:inline-block'>
 		</div>
 
-		<table class='table table-bordered' style='margin-top: 10px'>
+		<table class='table table-bordered' style='margin-top: 10px; width: 250px'>
 			<tbody id='devlist'>
 			</body>
 		</table>
