--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -16,6 +16,7 @@
 			 .number { width: 50px; font-size: 20px; text-align: center; font-weight: bold }
 			 .dev-menu { float: right; }
 			 .dots { cursor: pointer }
+			 .mypanel-heading { padding: 5px; }
 		</style>
 
 
@@ -46,35 +47,34 @@
 					<!-- /ko -->
 					<td class='col-name'>
 						<span data-bind='text: name'></span>
+						<!-- ko if: get_user_id() == name -->
 						<a style='float: right' class='dots' onclick='spectate()'>
 							<i class='fa fa-ellipsis-v'></i>
 						</a>
+						<!-- /ko -->
 					</td>
 					
 				</tr>
 			</body>
 		</table>
 
-		<div class='panel panel-primary'>
-			<div class='panel-heading'>
-				<p>Spectators</p>
-			</div>
-			<div class='panel-body'>
-				<table class='table table-bordered' style='margin-top: 10px; width: 250px'>
-					<tbody id='spectators' data-bind='foreach: spectators'>
-						<tr>
-							<td class='col-status bg-info'>
-								 <i class='fa fa-eye'></i> 
-							 </td>	
-							<td class='col-name'>
-								<span data-bind='text: name'></span>
-								<a style='float: right' class='dots' onclick='unspectate()'><i class='fa fa-ellipsis-v'></i></a>
-							</td>
-						</tr>
-					</body>
-				</table>
-			</div>
-		</div>
+			<table class='table table-bordered' style='margin-top: 10px; width: 250px'>
+				<tbody id='spectators' data-bind='foreach: spectators'>
+					<tr>
+						<td class='col-status bg-info'>
+							 <i class='fa fa-eye'></i> 
+						 </td>	
+						<td class='col-name'>
+							<span data-bind='text: name'></span>
+							<!-- ko if: get_user_id() == name -->
+							<a style='float: right' class='dots' onclick='unspectate()'>
+								<i class='fa fa-ellipsis-v'></i>
+							</a>
+							<!-- /ko -->
+						</td>
+					</tr>
+				</body>
+			</table>
 
         <script>
 			function ViewModel() {
@@ -113,10 +113,14 @@
 				return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
 			}
 
+			function get_user_id() {
+				return getParam("user_id"); //getCookie("user_id");
+			}
+
 			function send(data) {
 				//testing only
 				
-				data['user_id'] = getParam("user_id"); //getCookie("user_id");
+				data['user_id'] = get_user_id();
 				data['room_id'] = getParam("room_id"); //getCookie("room_id");
 				app.send(JSON.stringify(data));
 			}
